<resources>
    <string name="app_name">eWheelers Partners</string>
    <string name="title_home">eWheelers partner</string>
    <string name="tit_home">Home</string>
    <string name="title_orderreq">Rentals</string>
    <string name="title_testdrivereq">TestDrive Request</string>
    <string name="title_notification">Notifications</string>
    <string name="forget"><u>Forgot password</u></string>
    <string name="title_profile">Bookings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <array name="country">
        <item>select country</item>
        <item>Japan</item>
        <item>India</item>
        <item>china</item>
        <item>United States</item>
        <item>Afganistan</item>
        <item>Sri Lanka</item>
        <item>England</item>
        <item>South Africa</item>

    </array>
    <array name="state">
        <item>select state</item>
        <item>AP</item>
        <item>Telangana</item>
        <item>Kerala</item>
        <item>Thamil nadu States</item>
        <item>Delhi</item>
        <item>Orissa</item>
        <item>Mumbai</item>
        <item>Gujarat</item>

    </array>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_text_1">Cycles</string>
    <string name="page_text_2">Electric Scooters</string>
    <string name="page_text_3">Scooters</string>
    <string name="set_location"><u>Set Location</u></string>
    <string name="title_activity_maps">Map</string>
    <string name="orders_view"><u>View</u></string>
    <string name="view_all"><u>View All</u></string>
    <string name="upload_banner"><u>Upload Your Shop Banner and Logo</u></string>
    <string name="add_special_price">Add Special Price</string>
</resources>
