<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ewheelers.ewheelers.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.ewheelers.ewheelers.ui.orders.OrdersFragment"
        android:label="@string/title_orderreq"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/navigation_testdriverequests"
        android:name="com.ewheelers.ewheelers.ui.TestDriveRequestFragment"
        android:label="@string/title_testdrivereq"
        tools:layout="@layout/fragment_test_drive_request" />

    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.ewheelers.ewheelers.ui.BookingsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_bookings" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ewheelers.ewheelers.ui.notifications.NotificationsFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notifications" />
</navigation>